// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard.handleLogout > snapshot: the logout button reflects the loading state while signing out > Dashboard.logout-button-busy 1`] = `
<button
  aria-busy="true"
  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle lucide-loader-2 h-4 w-4 animate-spin"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  <span
    class="hidden sm:inline"
  >
    Signing out…
  </span>
</button>
`;

exports[`Dashboard.handleLogout > snapshot: the logout button reflects the loading state while signing out > Dashboard.logout-button-idle 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 gap-2"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-log-out h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 17 5-5-5-5"
    />
    <path
      d="M21 12H9"
    />
    <path
      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
    />
  </svg>
  <span
    class="hidden sm:inline"
  >
    Logout
  </span>
</button>
`;
